# Team_pulse_doctor_appointment_system

./: README.md
team_pulse/New folder/pages/: staff_dashboard.py
team_pulse/akhand's backend/: README.md
team_pulse/akhand's backend/appointments/: models.py
team_pulse/akhand's backend/env/: pyvenv.cfg
team_pulse/akhand's backend/env/Scripts/: activate
team_pulse/akshay's staff side frontend/: app.py
team_pulse/backend/: requirements.txt
team_pulse/backend/appointments/: serializers.py  urls.py  views.py
team_pulse/backend/appointments/migrations/: 0001_initial.py
team_pulse/backend/clinic/: settings.py  urls.py
team_pulse/backend/env/Scripts/: activate.bat
team_pulse/sahil's user side frontend/: agent_prompt.py  agent_worker.py  app.py  main.py  ps.tx  pyproject.toml  readme.md
team_pulse/sahil's user side frontend/static/: style.css
team_pulse/staff side frontend/: app.py
team_pulse/staff side frontend/pages/: staff_dashboard.py
